--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,30 +15,27 @@ jobs:
         with:
           user: mikey-
           token: ${{ secrets.METRICS_TOKEN }}
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
-          plugin_reactions: yes
-          plugin_stargazers: yes
-          plugin_languages: yes
-          plugin_languages_colors: "0:orange, javascript:#ff0000, ..."  # Make most used languages orange and JavaScript red
-          plugin_languages_details: bytes-size, percentage              # Additionally display total bytes size and percentage
-          plugin_languages_threshold: 0%                                # Hides all languages less than 2%
-          plugin_languages_limit: 20                                     # Display up to 8 languages
-          plugin_languages_sections: most-used, recently-used           # Display most used and recently used languages stats
-          plugin_languages_indepth: no                                  # Get indepth stats (see documentation before enabling)
-          plugin_languages_recent_load: 1000                             # Load up to 500 events to compute recently used stats
-          plugin_languages_recent_days: 30                               # Limit recently used stats to last week
-          commits_authoring: mikeydevops@gmail.com
-          plugin_activity: yes
-          plugin_activity_filter: push, issue, pr, review, comment, star
-          plugin_achievements: yes
-          plugin_achievements_secrets: yes
-          plugin_achievements_limit: 0
+          base: header, activity, community, repositories, metadata
+          repositories: 100
+          repositories_forks: yes
+          repositories_affiliations: owner, collaborator, organization_member
           plugin_skyline: yes
           plugin_skyline_frames: 60
           plugin_skyline_quality: 2
           plugin_skyline_compatibility: yes
-          # plugin_languages_ignored
-          # plugin_languages_skipped
-          # plugin_achievements_ignored
-          # plugin_skyline_year
+          plugin_languages: yes
+          plugin_languages_limit: 0
+          plugin_languages_colors: "javascript:#78c9f5, #955dd9:shell, ruby:#b00904, python:#075c1e"
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_details: bytes-size, percentage, lines
+          plugin_languages_recent_load: 1000
+          plugin_languages_recent_days: 0
+          plugin_achievements: yes
+          plugin_achievements_secrets: yes
+          plugin_achievements_limit: 1000
+          plugin_reactions: yes
+          plugin_activity: yes
+          plugin_activity_load: 1000
+          plugin_activity_days: 0
+          plugin_activity_filter: all
+          plugin_activity_visibility: all
