--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,11 @@ jobs:
           repositories_affiliations: owner, collaborator, organization_member
           token: ${{ secrets.METRICS_TOKEN }}
           user: mikey-
-          config_order: introduction, skyline, languages, achievements
+          config_order: introduction, followup, skyline, languages, achievements
           plugin_introduction: yes
           plugin_introduction_title: yes
+          plugin_followup: yes
+          plugin_followup_sections: repositories, user
           plugin_skyline: yes
           plugin_skyline_year: 2021
           plugin_skyline_frames: 120
