--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,34 +13,43 @@ jobs:
       - name: lowlighter/metrics 😁
         uses: lowlighter/metrics@latest
         with:
-          base: header, activity, community, repositories, metadata
-          repositories: 100
-          repositories_forks: yes
-          repositories_affiliations: owner, collaborator, organization_member
           token: ${{ secrets.METRICS_TOKEN }}
           user: mikey-
-          config_order: introduction, followup, skyline, languages, achievements
-          plugin_introduction: yes
-          plugin_introduction_title: yes
-          plugin_followup: yes
-          plugin_followup_sections: repositories, user
-          plugin_skyline: yes
-          plugin_skyline_year: 2021
-          plugin_skyline_frames: 120
-          plugin_skyline_quality: 1
-          plugin_skyline_compatibility: yes
-          plugin_languages: yes
-          plugin_languages_limit: 0
-          plugin_languages_sections: most-used, recently-used
-          plugin_languages_details: bytes-size, percentage
-          plugin_languages_recent_load: 1000
-          plugin_languages_recent_days: 0
+          base: header, activity, community, repositories, metadata
+          config_display: large
+          config_order: introduction, base.header, base.activity, base.community, base.repositories, base.metadata, notable, followup, reactions, stackoverflow, people, languages, achievements, activity
+          config_timezone: Australia/Melbourne
           plugin_achievements: yes
           plugin_achievements_secrets: yes
-          plugin_achievements_limit: 1000
-          plugin_reactions: yes
+          plugin_achievements_threshold: X
           plugin_activity: yes
-          plugin_activity_load: 1000
-          plugin_activity_days: 0
-          plugin_activity_filter: all
+          plugin_activity_days: 360
+          plugin_activity_filter: push, issue, pr, review, comment, wiki, fork, public, member, release, ref/create, ref/delete
+          plugin_activity_limit: 30
+          plugin_activity_load: 35
+          plugin_activity_timestamps: yes
           plugin_activity_visibility: all
+          plugin_followup: yes
+          plugin_followup_sections: all
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_languages: yes
+          plugin_languages_details: bytes-size, percentage
+          plugin_languages_limit: 0
+          plugin_languages_recent_days: 0
+          plugin_languages_recent_load: 1000
+          plugin_languages_ignored: Go, TypeScript, EJS
+          plugin_languages_sections: most-used, recently-used
+          plugin_languages_threshold: 0%
+          plugin_lines: yes
+          plugin_notable: yes
+          plugin_notable_repositories: yes
+          plugin_people: yes
+          plugin_people_types: owner, collaborator, organization_member
+          plugin_reactions: yes
+          plugin_stackoverflow: yes
+          plugin_stackoverflow_user: 5188080
+          repositories: 100
+          repositories_affiliations: owner, collaborator, organization_member
+          repositories_forks: yes
+
