--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,6 @@ name: Metrics
 on:
   # Schedule updates (each hour)
   schedule: [{cron: "0 14 * * *"}]
-  # Lines below let you run workflow manually and on each commit (optional)
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
@@ -17,7 +16,7 @@ jobs:
           user: mikey-
           base: header, activity, community, repositories, metadata
           config_display: large
-          config_order: introduction, base.header, base.activity, base.community, base.repositories, base.metadata, notable, followup, reactions, stackoverflow, people, languages, achievements, activity
+          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, notable, followup, reactions, stackoverflow, people, languages, achievements, activity
           config_timezone: Australia/Melbourne
           plugin_achievements: yes
           plugin_achievements_secrets: yes
@@ -41,7 +40,6 @@ jobs:
           plugin_languages_ignored: Go, TypeScript, EJS
           plugin_languages_sections: most-used, recently-used
           plugin_languages_threshold: 0%
-          plugin_lines: yes
           plugin_notable: yes
           plugin_notable_repositories: yes
           plugin_people: yes
