--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,9 @@ jobs:
           plugin_languages: yes
           plugin_languages_details: bytes-size, percentage
           plugin_languages_limit: 0
-          plugin_languages_recent_days: 0
+          plugin_languages_recent_days: 365
           plugin_languages_recent_load: 1000
-          plugin_languages_ignored: Go, TypeScript, EJS
+          plugin_languages_ignored: Go, TypeScript, EJS, Obective-C, 
           plugin_languages_sections: most-used, recently-used
           plugin_languages_threshold: 0%
           plugin_notable: yes
