--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,15 @@ jobs:
           user: mikey-
           base: header, activity, community, repositories, metadata
           config_display: large
-          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, notable, followup, reactions, stackoverflow, people, languages, achievements, activity
+          config_order: introduction, base.header, base.activity+community, base.repositories, base.metadata, notable, followup, reactions, people, languages, achievements, stackoverflow, activity
           config_timezone: Australia/Melbourne
           plugin_achievements: yes
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: X
           plugin_activity: yes
           plugin_activity_days: 360
           plugin_activity_filter: push, issue, pr, review, comment, wiki, fork, public, member, release, ref/create, ref/delete
-          plugin_activity_limit: 30
-          plugin_activity_load: 35
+          plugin_activity_limit: 10
+          plugin_activity_load: 10
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
@@ -36,8 +35,6 @@ jobs:
           plugin_languages_limit: 0
           plugin_languages_recent_days: 365
           plugin_languages_recent_load: 1000
-          plugin_languages_ignored: go, typescript, ejs, obective-c
-          plugin_languages_skipped: atom-clock, goformation, franz, aws-diagrams, rds_auto_upgrader, atom-mocha-test-runner, kubernetes-kafka, uptime, team-up
           plugin_languages_sections: most-used, recently-used
           plugin_languages_threshold: 0%
           plugin_notable: yes
@@ -49,5 +46,5 @@ jobs:
           plugin_stackoverflow_user: 5188080
           repositories: 100
           repositories_affiliations: owner, collaborator, organization_member
-          repositories_forks: yes
+          repositories_forks: no
 
