--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Metrics
 on:
-  schedule: [{cron: "0 14 * * *"}]
+  schedule: [{cron: "0 14 */7 * *"}]
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
