testing lowlighter/metrics fork
Should hopefully fix the achievements section

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # See action.yml for all options
-      - name: lowlighter/metrics 😁
-        uses: lowlighter/metrics@latest
+      - name: mikey-/metrics 😁
+        uses: mikey-/metrics@master
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: mikey-
